--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#10cab6</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#c7000000</color>
+    <color name="colorPrimaryDark">#c7000000</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBackground">#fbfffb</color>
 </resources>
